--- a/src/index.css
+++ b/src/index.css
@@ -101,10 +101,10 @@ p {
   }
 }
 
-@keyframes rotateAnimation {
+@keyframes aparecer {
   0% {
     opacity: 0;
-    transform: translateX(40%);
+    transform: translatey(-40%);
     
   }
   50% {
@@ -143,7 +143,8 @@ p {
   @keyframes opacidad{
   
     0% {
-      opacity: 0;;
+      opacity: 0;
+      
     }
    
     100% {
