mejoras de ligthouse y retoques

--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,8 @@
+@font-face {
+  font-family: 'Principal';
+  src: url('../fonts/Principal.ttf') format('truetype');
+  /* O utiliza format('woff') si la fuente está en formato WOFF */
+}
 :root {
  --amarillo:#F9D949;
  --blanco:#F0F0F0;
@@ -8,7 +13,7 @@
   --rojo:#c93636cc;
   --verde:#34832191;
  /* fuentes*/
- --principal: 'Pathway Extreme', sans-serif;
+ --principal: 'Principal', sans-serif;
 }
 
 html{
